--- a/src/StartPage/StartPage.css
+++ b/src/StartPage/StartPage.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Jacquarda+Bastarda+9&family=Kaushan+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
 
 .allText {
     align-items: center;
@@ -9,6 +10,11 @@
     font-family: "Chakra Petch", Arial, Helvetica, sans-serif;
     font-size: 8rem;
     margin: 0 0 1rem 0;
+}
+
+.desc {
+    font-family: "Afacad Flux", Arial, Helvetica, sans-serif;
+    font-size: 2rem;
 }
 
 .start {
