--- a/src/SecondPage/SecondPage.css
+++ b/src/SecondPage/SecondPage.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Jacquarda+Bastarda+9&family=Kaushan+Script&display=swap');
-html {
-    color: green;
+
+.secondPageContainer {
+    display: flex;
+    gap: 3rem;
 }
 
-.desc {
+.dialogo {
+    color: #FFF7F7;
     display: flex;
     align-items: center;
     gap: 3rem;
