--- a/src/FirstPage/FirstPage.css
+++ b/src/FirstPage/FirstPage.css
@@ -6,7 +6,7 @@ html {
     background-color: #1a1a1a;
     padding: 2rem;
     text-align: center;
-    align-items: center;
+    
 }
 
 .dialog {
@@ -34,4 +34,10 @@ html {
 
 .next:active {
     opacity: 0.80;
+}
+
+img {
+    align-items: center;
+    width: 20%;
+    height: 20%;
 }
