--- a/src/SecondPage/SecondPage.css
+++ b/src/SecondPage/SecondPage.css
@@ -1,19 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Jacquarda+Bastarda+9&family=Kaushan+Script&display=swap');
 
-.secondPageContainer {
-    display: flex;
-    gap: 3rem;
+html {
+    font-family: "Chakra Petch", Arial, Helvetica, sans-serif;
+    background-color: #1a1a1a;
+    padding: 2rem;
+    text-align: center;
 }
 
-.dialogo {
-    color: #FFF7F7;
-    display: flex;
-    align-items: center;
-    gap: 3rem;
-}
-
-.dialog {
-    color: #FFF7F7;
-    font-size: 2.188rem;
-    padding: 0 23rem 0 23rem;
+img {
+    width: 30%;
+    height: 30%;
 }
