--- a/src/SecondPage/SecondPage.css
+++ b/src/SecondPage/SecondPage.css
@@ -7,6 +7,10 @@ html {
     text-align: center;
 }
 
+.secondPageContainer {
+    align-content: center;
+}
+
 img {
     width: 30%;
     height: 30%;
