--- a/src/FirstPage/FirstPage.css
+++ b/src/FirstPage/FirstPage.css
@@ -41,3 +41,10 @@ img {
     width: 20%;
     height: 20%;
 }
+
+.planetImage1 {
+    position: absolute;
+    right: 89%;
+    height: 180px; 
+    width: 180px; 
+}
